--- a/css/buttonstyle.css
+++ b/css/buttonstyle.css
@@ -1,9 +1,10 @@
-		/* 统一导航栏按钮样式 */
+		/* 统一登录页面导航栏按钮样式 */
 		#buttonstyle{
 			z-index: 2;
 			width: 80px;
 			height: 55px;
 			border-radius: 15px;
+			border: none;
 			box-shadow: 5px 3px 5px 2px rgba(0, 0, 0, 0.3);
 			font-size: 20px;
 			font-weight: 700;
