--- a/css/register.css
+++ b/css/register.css
@@ -30,13 +30,13 @@
 			/* background-color: #ffaa00; */
 			font-size: 30px;
 			font-weight: 600;
-			color: rgba(255, 255, 255, 0.5);
+			color: rgba(255, 255, 255, 0.7);
 			
 			display: flex;
 			align-items: center;
 			justify-content: center;
 			position:absolute;
-			top: 27px;
+			top: 130px;
 			transition: 0.4s;
 		}
 		
@@ -53,16 +53,16 @@
 		
 		/* 导航-原神 */
 		.Genshin-Impact{
-			position: fixed;/* 固定 */
+			position: absolute;
 			top: 2.4%;
-			right: 12%;
+			right: 180px;
 		}
 		
 		/* 导航-登录 */
 		.header{
-			position: fixed;/* 固定 */
+			position: absolute;
 			top: 2.4%;
-			right: 5%;
+			right: 80px;
 		}
 
 		/* 互动 */
@@ -70,7 +70,7 @@
 			display: none;/* 隐藏勾选框 */
 		}
 		#display:checked ~ .box{
-			display: none;/* 互动时表单是否显示 */
+			display: none;
 		}
 		
 		/* 表单 */
@@ -88,56 +88,64 @@
 			z-index: 2;
 			width: 240px;
 			height: 240px;
+			background-color: rgba(255, 255, 255, 0.3);
+			/* box-shadow: 0 0 20px 20px rgba(5, 57, 124, 0.9); */
+			backdrop-filter: blur(4px);
 			padding: 40px;
 			border-radius: 18px;
 			text-align: center;
-			overflow: hidden;/* 清除浮动 */
+			overflow: hidden;
 			
 			display: flex;
 			flex-direction: column;/* 内容排列方式从上往下 */
 			
 			position: relative;
 		} 
-		.register::before{/* 模糊 *//* after */
+		/* .register::before{
 			content: "";
-			width: calc(100% + 20px);
-			height: calc(100% + 20px);
-			box-shadow: inset 0 0 0 200px rgba(255,255,255,0.35);/* 阴影颜色 */
+			width: 100%;
+			height: 100%;
+			box-shadow: inset 0 0 0 200px rgba(255,255,255,0.35);
 			backdrop-filter: blur(4px);
 			
 			position: absolute;
 			top: -10px;
 			left: -10px;
+		} */
+		
+		/* 梅花 */
+		.form-icon-hua{
+			width: 25px;
+			height: 25px;
+			position: relative;
+			top: 5px;
 		}
 
 		/* 鱼妄妄 */
-		.register h2{
+		.register>h2{
+			width: 100%;
 			z-index: 1;
 			font-size: 18px;
 			font-weight: 600;
 		}
 		
 		/* 输入框 */
-		.register input{
+		.register>input{
 			margin: 6px 0;
 			height: 36px;
-			border: none;/* 边框 没有 */
+			font-weight: 600;
+			border: none;
 			background-color: rgba(124, 124, 124, 0.3);
 			border-radius: 4px;
 			padding: 0 14px;
-			color:  rgba(0, 0, 0, 1.0);/* 光标颜色 */
+			color:  rgba(0, 0, 0, 1.0);
 			z-index: 1;
 		}
 		.register input::placeholder{/* 输入框内内置文字 */
-			color: #3d3d3d;/* 输入框内文字颜色 */
+			color: #3d3d3d;
 		}
 		.register input:focus{/* 按钮和输入框的选中高亮 */
 			outline: none;/* 选中输入框高亮为0（取消） */
-		}
-		.register button:hover{/* 鼠标悬停在按钮上时 */
-			box-shadow: 3px 3px 3px 2px rgba(255, 255, 255, 0.5);
-			background-color: rgba(20, 30, 85, 0.5);/* 背景颜色 */
-			transition: 0.5s;
 		}
 		 
 		/* &times; */
@@ -177,6 +185,7 @@
 			margin: 6px 0;
 			overflow: hidden;
 			border-radius: 4px;
+			border: none;
 			font-size: 20px;
 			font-weight: 600;
 			color: rgba(255, 255, 255, 0.5);
@@ -186,38 +195,35 @@
 			align-items: center;
 			justify-content: center;
 			
-			transition: 0.1s;
+			transition: 0.3s;
 		}
 		.logon:hover{
-			color: rgba(0, 0, 0, 0.5);
+			color: rgba(0, 0, 0, 0.7);
 			box-shadow: 3px 3px 2px 2px rgba(255, 255, 255, 0.5);
 			transition: 0.3s;
 		}
 		.logon:active{
 			color:rgba(0, 0, 0, 0.3);
-			background-color: rgba(124124 124124, 124124, 0.3);
-			box-shadow: 3px 3px 2px 2px rgba(124, 124, 124, 0.5);
+			background-color: rgba( 124, 124, 124, 0.3);
+			box-shadow: 3px 3px 2px 2px rgba(0, 0, 0, 0.5);
 		}
 		
 		/* 注册 忘记密码 */
-		.sign-up{
-			position: sticky;
-			right: 100%;
+		.register>span{
+			display: flex;
+			justify-content: space-between;
 		}
-		.forgot{
-			position: sticky;
-			left: 100%;
-		}
-		/* 前 后 时*/
+		
 		a:link,
-		a:visited,
-		a:active{
+		a:visited{
 			color: rgba(255, 255, 255, 0.5);
-			}
-			/* 悬浮*/
+		}
+		a:active{
+			color: rgba(170, 0, 0, 0.9);
+		}
 		a:hover{
 			color: rgba(0, 0, 0, 0.5);
-			}
+		}
 			
 		/* 页脚 */
 		footer{
@@ -226,72 +232,3 @@
 			bottom: 10px;
 			right: 10px;
 		}
-
-
-		/* 手机 */
-		@media (max-width:900px){
-			body{
-				/* background-color: chocolate; */
-			}
-		}
-		
-		/* 平板 */
-		@media (min-width:901px) and (max-width:1200px){
-			body{
-				/* background-color: chartreuse; */
-			}
-		}
-		
-		/* 电脑 */
-		@media (min-width:1201px) and (max-width:1400px){
-			body{
-				/* background-color: pink; */
-			}
-		}
-		
-		/* 最大屏 */
-		@media (min-width:1401px){
-			body{
-				/* background-color: red; */
-			}
-		}
-		
-		@media (max-width:600px){
-			#time{
-				top: 120px;
-			}
-		}
-		
-		@media (max-width:440px){
-			#time{
-				/* visibility: hidden;/* 隐藏 */ */
-			}
-		}
-		
-		@media (max-width:1300px){
-			.Genshin-Impact{
-				right: 15%;
-				transition: 0.2s;
-			}
-		}
-		@media (max-width:920px){
-			.Genshin-Impact{
-				right: 21%;
-				transition: 0.2s;
-			}
-		}
-		@media (max-width:700px){
-			.Genshin-Impact{
-				right: 27%;
-				transition: 0.2s;
-			}
-		}
-		@media (max-width:570px){
-			.Genshin-Impact{
-				right: 30%;
-				transition: 0.2s;
-			}
-		}
-		
-
-		
